fixed padding-top for article dates on big screens

--- a/Home/home.css
+++ b/Home/home.css
@@ -71,6 +71,7 @@
 
 .big-screen {
   display: none;
+  padding-top: 0.5rem;
 }
 /* ============================================================================ */
 .card__small {
